--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"css-loader": "^7.1.1",
 		"date-fns": "^3.6.0",
 		"html-loader": "^5.0.0",
+		"pubsub-js": "^1.9.4",
 		"style-loader": "^4.0.0",
 		"webpack": "^5.91.0",
 		"webpack-cli": "^5.1.4",
